# opengl-imgui-cmake-template

./: CMakeLists.txt  LICENSE  README.md  imgui.ini
include/display/: base_window.hpp  game_window.hpp
include/shaders/: shader.hpp
include/utils/: utility.hpp
libs/glad/: glad.h
resources/shaders/: testing.fs  testing.vs
src/: main.cpp
src/display/: base_window.cpp  game_window.cpp
src/shaders/: shader.cpp
src/utils/: utility.cpp
